[package]
name = "pio_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = {version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"

embassy-time = { version = "0.1.0", features =  ["defmt-timestamp-uptime"]}
embassy-sync = { version = "0.1.0", features = ["defmt"] }
embassy-executor = { version = "0.1.0", features = ["defmt", "integrated-timers"] }
embassy-futures =  { version = "0.1.0" }
embassy-net = { version = "*", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet", "pool-16", "unstable-traits", "nightly"] }
embassy-rp = { version = "0.1.0",  features = ["defmt", "unstable-traits", "nightly", "unstable-pac", "time-driver", "pio"] }
atomic-polyfill = "0.1.5"


defmt = { version = "0.3"}
defmt-rtt = "0.3"
log = { version = "0.4.17" }
panic-probe = { version = "0.3", features = ["print-defmt"] }



futures = { version = "0.3.17", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }

embedded-hal-1 = { package = "embedded-hal", version = "1.0.0-alpha.9" }
embedded-hal-async = { version = "0.2.0-alpha.0" }
embedded-io = { version = "0.4.0", features = ["async", "defmt"] }
heapless = "0.7.15"
pio-proc = "0.2"
pio = "0.2"
cyw43={version="0.1.0", features = ["defmt"]}
static_cell = "1.0"
httparse={version="1.8", default-features=false}

[patch.crates-io]
embassy-time = { git="https://github.com/embassy-rs/embassy.git" }
embassy-sync = { git="https://github.com/embassy-rs/embassy.git" }
embassy-rp = { git="https://github.com/embassy-rs/embassy.git" }
embassy-executor = { git="https://github.com/embassy-rs/embassy.git" }
embassy-net = { git="https://github.com/embassy-rs/embassy.git", rev="47747d3b" }
pio = {git = "https://github.com/rp-rs/pio-rs.git"}
cyw43={git = "https://github.com/embassy-rs/cyw43.git"}